Add sentiment analysis notebooks, results, and dependencies

--- a/notebooks/scraper.ipynb
+++ b/notebooks/scraper.ipynb
@@ -11,11 +11,11 @@
      "output_type": "stream",
      "text": [
       "bank\n",
-      "Commercial Bank of Ethiopia    7500\n",
-      "Bank of Abyssinia              1044\n",
-      "Dashen Bank                     449\n",
+      "Commercial Bank of Ethiopia    7509\n",
+      "Bank of Abyssinia              1045\n",
+      "Dashen Bank                     454\n",
       "Name: count, dtype: int64\n",
-      "Total reviews collected: 8993\n"
+      "Total reviews collected: 9008\n"
      ]
     }
    ],
@@ -59,8 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "7\n",
       "% Missing Data: 0.00%\n",
-      "Cleaned review count: 6673\n",
+      "Cleaned review count: 6832\n",
       "\n",
       "Missing values:\n",
       " review    0\n",
@@ -72,17 +73,17 @@
       "\n",
       "Bank count:\n",
       " bank\n",
-      "Commercial Bank of Ethiopia    5524\n",
-      "Bank of Abyssinia               786\n",
-      "Dashen Bank                     363\n",
+      "Commercial Bank of Ethiopia    5531\n",
+      "Bank of Abyssinia               890\n",
+      "Dashen Bank                     411\n",
       "Name: count, dtype: int64\n",
-      "% Missing Data Removed: 25.78%\n",
+      "% Missing Data Removed: 24.01%\n",
       "                                              review  rating        date  \\\n",
-      "0  really am happy to this app it is Siple to use...       5  2025-06-07   \n",
-      "1  I liked this app. But the User interface is ve...       2  2025-06-07   \n",
-      "2  \"Why don’t your ATMs support account-to-accoun...       4  2025-06-06   \n",
-      "3                        what is this app problem???       1  2025-06-05   \n",
-      "4       the app is proactive and a good connections.       5  2025-06-05   \n",
+      "0  . Reviewing content on Play is a great way to ...       5  2025-06-10   \n",
+      "1                         So bad now and hard to use       5  2025-06-09   \n",
+      "2  it is so amazing app. but, it is better to upd...       5  2025-06-09   \n",
+      "3                                         v.good app       4  2025-06-09   \n",
+      "4                                      very good app       1  2025-06-09   \n",
       "\n",
       "                          bank       source  \n",
       "0  Commercial Bank of Ethiopia  Google Play  \n",
@@ -96,6 +97,8 @@
    "source": [
     "df = pd.read_csv(\"../data/raw_reviews.csv\")\n",
     "\n",
+    "print(df['review'].isna().sum())\n",
+    "\n",
     "original_len = len(df)\n",
     "\n",
     "# Drop rows where review is null or empty string\n",
@@ -106,7 +109,7 @@
     "print(f\"% Missing Data: {removed_pct:.2f}%\")\n",
     "\n",
     "# Drop duplicates\n",
-    "df.drop_duplicates(subset='review', inplace=True)\n",
+    "df.drop_duplicates(subset=['bank', 'review'], inplace=True)\n",
     "\n",
     "# Normalize date\n",
     "df['date'] = pd.to_datetime(df['date']).dt.strftime('%Y-%m-%d')\n",
